[package]
name = "seeip"
version = "3.0.0"
edition = "2021"
description = "Rust Wrapper for the IP Info https://seeip.org/ API"
homepage = "https://github.com/mark-ruddy/seeip"
repository = "https://github.com/mark-ruddy/seeip"
license-file = "LICENSE.txt"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
